--- a/packages/xgplayer/package.json
+++ b/packages/xgplayer/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "xgplayer",
+    "name": "hkplayer",
     "version": "1.1.7",
     "description": "video player",
     "main": "./dist/index.js",
@@ -25,7 +25,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/bytedance/xgplayer.git"
+        "url": "git+https://github.com/bytedance/hkplayer.git"
     },
     "author": "yinguohui@bytedance.com",
     "license": "MIT",
